stopped the button from stretching

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -19,17 +19,17 @@
 .search__input {
   width: 0;
   border: 0;
-  background-color: #fdf3d7;
+  /* background-color: #fdf3d7; */
+  background-color: red;
   color: #8c6d1f;
   font-size: 1.3rem;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
-  // padding: 15px;
 }
 
 .search__button {
   display: flex;
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   background-color: #f2c963;
   border: none;
@@ -37,9 +37,9 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  max-width: 60px;
   align-items: center;
   justify-content: center;
+  flex-grow: 0;
 }
 
 .search__icon {
@@ -47,5 +47,5 @@
   font-weight: bold;
   font-size: 1.7rem;
   color: #8c6d1f;
-  padding: 15px;
+  padding: 20px;
 }
